Add custom description to lajv pages

--- a/_layouts/lajv.html
+++ b/_layouts/lajv.html
@@ -3,6 +3,7 @@ title: Oxdjupet Lajv
 home_url: /lajv
 header_pages:
   - lajv/privacy_policy.md
+description: Appen för det årliga lajvet på Oxdjupet
 ---
 
 <!DOCTYPE html>
